Changed remove signature